--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "cd dist && cp index.html 404.html"
+    "postbuild": "node postbuild.cjs"
   },
   "dependencies": {
     "vue": "^3.4.31",
